refactor: rename SampleAPI to Simple

--- a/samples/Simple/Properties/launchSettings.json
+++ b/samples/Simple/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SampleAPI": {
+    "Simple": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
