--- a/samples/Simple/Simple.csproj
+++ b/samples/Simple/Simple.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>Simple</AssemblyName>
+    <RootNamespace>Simple</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
